# ChangeLog for media-plugins/xmms-jack
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/xmms-jack/ChangeLog,v 1.13 2004/10/14 10:12:37 eradicator Exp $

*xmms-jack-0.10 (14 Oct 2004)

  14 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +xmms-jack-0.10.ebuild, -xmms-jack-0.7.ebuild, -xmms-jack-0.8.1.ebuild:
  Version bump closes bug #67437.  0.9 stable on sparc.  Removed old versions.

  22 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> xmms-jack-0.9.ebuild:
  Added to ~sparc.

  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> xmms-jack-0.9.ebuild:
  Stable amd64.

  13 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> xmms-jack-0.7.ebuild,
  xmms-jack-0.8.1.ebuild, xmms-jack-0.9.ebuild:
  Getting rid of virtual/jack.

  02 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> xmms-jack-0.9.ebuild:
  Stable x86.

  07 May 2004; Danny van Dyk <kugelfang@gentoo.org> xmms-jack-0.9.ebuild:
  Marked ~amd64.

*xmms-jack-0.9 (20 Apr 2004)

  20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> xmms-jack-0.9.ebuild:
  Version bump.  Bug #47804.

  31 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-jack-0.8.1.ebuild:
  Stable on x86.

  26 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> xmms-jack-0.7.ebuild,
  xmms-jack-0.8.1.ebuild:
  Changed dep to virtual/jack.

  21 Mar 2004; David Holm <dholm@gentoo.org> xmms-jack-0.8.1.ebuild:
  Added to ~ppc.

*xmms-jack-0.8.1 (23 Feb 2004)

  23 Feb 2004; Jeremy Huddleston <eradicator@gentoo.org> xmms-jack-0.7.ebuild,
  xmms-jack-0.8.1.ebuild:
  Version bump.

*xmms-jack-0.7 (31 Jan 2004)

  31 Jan 2004; Jeremy Huddleston <eradicator@gentoo.org> xmms-jack-0.7.ebuild:
  xmms-jack is an output plugin for xmms using the jack audio server. ebuild
  provided by me.
