@@ -1,8 +1,10 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/xmms-jack/xmms-jack-0.10.ebuild,v 1.1 2004/10/14 10:12:37 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/xmms-jack/xmms-jack-0.10.ebuild,v 1.2 2004/10/19 23:04:19 eradicator Exp $
 
 IUSE=""
+
+inherit xmms-plugin
 
 DESCRIPTION="a jack audio output plugin for XMMS"
 HOMEPAGE="http://xmms-jack.sourceforge.net/"
@@ -12,14 +14,10 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86 ~ppc ~amd64 ~sparc"
 
-DEPEND="media-sound/xmms
-	media-sound/jack-audio-connection-kit"
+DEPEND="media-sound/jack-audio-connection-kit"
+
+XMMS_S="${XMMS_WORKDIR}/${PN}"
+BMP_S="${BMP_WORKDIR}/${PN}"
 
 DOCS="AUTHORS ChangeLog INSTALL NEWS README"
 
-S="${WORKDIR}/${PN}"
-
-src_install() {
-	make DESTDIR="${D}" install || die
-	dodoc ${DOCS}
-}
